manifests/cluster-addons/monitoring/prometheus-blackbox-exporter/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-blackbox-exporter
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-blackbox-exporter

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9115'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: '9093'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: rustfs
      toPorts:
        - ports:
            - port: '9000'
              protocol: TCP

    # Any pod in any other namespace, for internal probes
    - toEndpoints:
        - matchExpressions:
            - key: 'k8s:io.kubernetes.pod.namespace'
              operator: NotIn
              values:
                - monitoring

    - toFQDNs:
        - matchName: 'authentik.bakseter.net'
        - matchName: 'bakseter.net'
        - matchName: 'mandagsmiddag.no'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
